# Blog-Articles

./: LICENSE  README.md
Arducam-64MP-Raspberry-Pi-Camera/: Focuser.py  README.md  control.py  v4l2_utils.py
ESP32-ESP8266-Experiments/: README.md
ESP32-ESP8266-Experiments/esp32/: secrets.py  sensor.py
ESP32-ESP8266-Experiments/esp8266/: config.py  machine_sensor.py  mpu_6050.py  run.py
Forza-Telemetry/: .gitignore  LICENSE.txt  README.md  config.json.example  controller_config.json.example  dashboard.py  requirements.txt  tools.py
Forza-Telemetry/assets/: Screen-Enclosure-Body.stl  Screen-Enclosure.FCStd  dashboard.wxg
Forza-Telemetry/util/: adafruit_aw9523_mock.py  data_looper.py  data_packet.py  led.py  telemetry.py  ui.py
Forza-Telemetry/workers/: dashboard_background.py  recorder.py
HarperDB-Crypto-Dashboard/: README.md
HarperDB-Digital-Signage-System/: README.md
Interactive-LED-Strip/: README.md
Interactive-LED-Strip/frontend/: README.md  package-lock.json  package.json  tsconfig.json
Interactive-LED-Strip/microcontroller/: README.md  config.py  main.py
LoRa-Garage/: README.md  code.py  config.py  open_sesame.py
Localized-Jet-Tracker/: README.md  example.json  parse-with-email.py  parse.py
Raspberry-Pi-AHT20-Climate-Sensor-Python/: README.md  aht20.py  entries.json  requirements.txt
Raspberry-Pi-SGP40-Mox-Gas-Sensor-Python/: README.md  aht20-sgp40.py  entries.json
Smart-Home-AI-Assistant/: .gitignore  README.md  pyproject.toml
Smart-Home-AI-Assistant/assistant_server/: assistant.py  main.py
(+19 files in other folders)
